--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
-#root {
+/* #root {
   max-width: 1280px;
-  /* margin: 0 auto;
-  padding: 2rem; */
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
-}
+} */
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
+
 /* .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
@@ -33,10 +28,3 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
